[package]
name = "ascii-tool"
version = "0.1.0"
authors = ["flou <muehlhans.florian@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.12"
config = "0.9"
nom  = "5.0.0"
lazy_static = "1.0"
serde_json = "1.0"
man = "0.3.0"
roff = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
clt = "0.0.6"